# ventaxia_ha

./: .pre-commit-config.yaml  README.md  __init__.py  button.py  config_flow.py  const.py  hacs.json  manifest.json  requirements_test.txt  sensor.py  services.yaml  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: constraints.txt  docs.yml  labeler.yml  linting.yaml  pre-commit.yml  release-drafter.yml  reset-instance.yml  tests.yaml  tests.yml
custom_components/ventaxia_ha/: __init__.py  button.py  config_flow.py  const.py  entities.py  manifest.json  pyproject.toml  runtime_timer.py  select.py  sensor.py  services.yaml
custom_components/ventaxia_ha/frontend/: __init__.py  ventaxia-card.js
custom_components/ventaxia_ha/translations/: en.json  es.json
custom_components/ventaxia_ha/www/: ventaxia-card.js
tests/: __init__.py  conftest.py  const.py  test_config_flow.py  test_sensor.py
