[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ventaxia_ha"
version = "1.0.0"
description = "Home Assistant integration for VentAxia IoT devices"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = ["ventaxiaiot>=0.1.0"]