[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ventaxia_ha"
version = "0.1.3"
description = "Home Assistant integration for VentAxia IoT devices"
authors = [{name = "josyban", email = "you@example.com"}]
dependencies = ["ventaxiaiot>=0.1.2"]
